--- a/OnlineSeatBookingSystem/src/main/resources/application.properties
+++ b/OnlineSeatBookingSystem/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
-spring.datasource.password=0231
-spring.datasource.url=jdbc:postgresql://localhost:5432/obs
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.password=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
